2009-09-23  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-version): New variable.
	(gdb-non-stop-handler): Set gdb-version.
	(gdb-gud-context-command, gdb-current-context-command, gdb-stopped):
	Condition "--thread" option on gdb-version.
	(gdb-invalidate-threads): Remove unused argument.

2009-09-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/flyspell.el (sgml-mode-flyspell-verify): Pass limit args
	to looking-back to avoid ridiculous slow down in large files (bug#4511).

2009-09-23  Glenn Morris  <rgm@gnu.org>

	* mail/rmail.el (rmail-reply): Don't try to add a References header when
	replying to mail without References or Message-Id.  (Bug#4525)

2009-09-23  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* term/ns-win.el (ns-reg-to-script): New variable.

2009-09-23  Daiki Ueno  <ueno@unixuser.org>

	* epg.el (epg-wait-for-status): Preserve existing 'error results.

2009-09-22  Sam Steingold  <sds@gnu.org>

	* vc-hg.el (vc-hg-print-log): Fix shortlog arg passing.
	(vc-hg-outgoing, vc-hg-incoming): Bump okstatus in `vc-hg-command'
	to 1 because hg returns status 1 when nothing is found.
	Bind `vc-short-log' for the sake of `vc-hg-log-view-mode'.

2009-09-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/fill.el: Convert to utf-8 encoding.
	(fill-french-nobreak-p): Remove redundant » and « inherited from our
	pre-unicode days.

	* add-log.el (change-log-fill-forward-paragraph): New function.
	(change-log-mode): Use it so fill-region DTRT.
	Set fill-indent-according-to-mode here rather than in
	change-log-fill-paragraph.
	(change-log-fill-paragraph): Remove.

2009-09-22  Juanma Barranquero  <lekktu@gmail.com>

	* info.el (Info-try-follow-nearest-node): Use the URL extracted by
	`Info-get-token', instead of `browse-url-url-at-point'.  (Bug#4508)

2009-09-22  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-mode-map): Make mouse-1 and 3 clicks on
	the scroll-bar scroll the calendar window rather than the buffer.